# DFA

./: CMakeLists.txt  README.md  regex.rgx
include/: buffer.h  common.h  fileWriter.h  map.h  node.h  regex.h  scanner.h  stack.h  tokens.h  vector.h
src/: buffer.c  fileWriter.c  main.c  node.c  regex.c  scanner.c
